--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,6 +6,9 @@ kernel:
     resource: ../src/Kernel.php
     type: annotation
 
+index:
+    path: /
+    methods: GET
 app_logout:
     path: /logout
     methods: GET
